manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-mcp
  template:
    metadata:
      labels:
        app: kube-mcp
        app.kubernetes.io/name: kube-mcp
    spec:
      automountServiceAccountToken: true
      serviceAccountName: kube-mcp
      containers:
        - name: kube-mcp
          image: ghcr.io/cturner8/kube-mcp:dev
          args: [
            "--allowed-origins",
            "http://localhost:6274"
          ]
          ports:
            - containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
