manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-mcp
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      name: http
  selector:
    app: kube-mcp
